--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Mufti Haseebullah Habeebi
 <div class="row text-center">
 <h1>WHAT WE DO?</h1>
 <hr>
-<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
+
 <div class="text-left"> 
 <div class="col-md-4 clearfix top-off">
 <div class="grid-content-left"><i class="fa fa-heart"></i></div>
@@ -185,7 +185,8 @@ Mufti Haseebullah Habeebi
 </div>
 <div class="col-md-4 clearfix top-off">
 <div class="grid-content-left"><i class="fa fa-cutlery"></i></div>
-<div class="grid-content-wrapper"><h4>Feed for Hungry Child</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur eget justo quis dignissim.</p>
+<div class="grid-content-wrapper"><h4>Feed for Hungry Child</h4>
+<p>Every child deserves a wholesome meal regularly. In line with this, Al-Khaleel Trust strives each day to provide nutritious mid-day meals to school children. Mid-day meals have been a potential factor in boosting health, learning and development among school children.</p>
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
@@ -446,7 +447,7 @@ Mufti Haseebullah Habeebi
 					</div><!-- /.footer-section -->
 				</div><!-- /.columns large-3 medium-12 -->
 				
-				<div class="col-md-3">
+					<div class="col-md-3">
 					<div class="footer-section">
 						<h4 class="footer-section-title">Newsletter Signup</h4><!-- /.footer-section-title -->
 						
