--- a/activities.html
+++ b/activities.html
@@ -117,6 +117,26 @@ Source: RGI Census Population Projection 2016 and Unified DISE 2016-17</p>
 </div>
 
 
+<div class="act-box clearfix">
+<div class="col-md-6">
+<div class="image"><img src="images/charityedu1.jpg" /></div>
+</div>
+<div class="col-md-6">
+<div class="act-pad">
+<h4>FEED FOR HUNGRY CHILD</h4>
+
+Every child deserves a wholesome meal regularly. In line with this, Al-Khaleel Trust strives each day to provide nutritious mid-day meals to school children. Mid-day meals have been a potential factor in boosting health, learning and development among school children. 
+
+This world  join Al-Khaleel Trust’s journey of nourishing and nurturing children with nutritious meals. Your contribution will provide the much-needed school meals and education to children studying in schools other states of India. It will also help them in continuing education and thus empower them to achieve their dreams.
+
+This World Hunger Day, make a generous donation of  to feed a child for a complete academic year. Your support will not only help in ending classroom hunger but also uphold childhood by infusing joy and providing a platform for learning</p>
+
+<a href="donate.html" class="btn1">donate now</a>
+<div class="clearfix"></div>
+</div>
+</div>
+</div>
+
 </div>
 </div>
 </section>
