--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="keywords" content="">
+<meta name="description" content="ALKHALEEL TRUST PATNA">
+<meta name="keywords" content="donate to alkhaleel trust">
 <meta name="robots" content="index,follow">
 
-<title>AL-Khaleel Trust | Contact Us</title>
+<title>AL-KHALEEL TRUST | DONATE </title>
 
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
@@ -37,13 +37,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="container">
 <div class="row"> 
 <div class="bar-phone">
-<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+91-9415427364</strong>
+<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+91 9415427364</strong>
 </div>
 <div class="bar-mail">
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>alkhaleeltrust@yahoo.com</strong>
 </div>
 <div class="header-social">
-<a class="facebook" href="https://www.facebook.com/alkhaleel.trust.10" title="facebook" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i>  </a>
+<a class="facebook" href="#" title="facebook" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i>  </a>
 <a class="twitter" href="#" title="twitter" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i>  </a>
 <a class="linkedin" href="#" title="linkedin" target="_blank" rel="nofollow"><i class="fa fa-linkedin"></i>  </a>
 <a class="google" href="#" title="google-plus" target="_blank" rel="nofollow"><i class="fa fa-google-plus"></i>  </a>
@@ -83,64 +83,69 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="overlay">
 <div class="container">
 <div class="row"> 
-<div class="col-sm-6"><h1>CONTACT US</h1></div>
+<div class="col-sm-6"><h1>DONATE</h1></div>
 <div class="col-sm-6">
-  <h6 class="breadcrumb"><a href="index.html">Home</a> / Contact us</h6></div>
+  <h6 class="breadcrumb"><a href="index.html">Home</a> / Donate</h6></div>
 </div>
 </div>
 </div>
 </section>
 
-<div class="google-maps">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3598.802672895809!2d85.06575731501722!3d25.578230983720303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDM0JzQxLjYiTiA4NcKwMDQnMDQuNiJF!5e0!3m2!1sen!2sin!4v1624712259022!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
-
 <section id="about-sec">
 <div class="container">
-<div class="row text-center" style=" margin-top:-20px;">
-<div class="col-md-4" style=" margin-top:20px;">
-<div class="con-box">
-<div class="fancy-box-icon">
-<i class="fa fa-mobile-phone"></i>
-</div>
-<h3>PHONE</h3>
-<div class="fancy-box-content">
-<p>Phone : +91-9415427364<br>
-
-</div>
-</div>
-</div>
-<div class="col-md-4" style=" margin-top:20px;">
-<div class="con-box" style="background:#2f3191;">
-<div class="fancy-box-icon">
-<i class="fa fa-map-marker"></i>
-</div>
-<h3>ADDRESS</h3>
-<div class="fancy-box-content">
-<p>Phulwari Shareef Patna-801504
-
-</div>
-</div>
-</div>
-<div class="col-md-4" style=" margin-top:20px;">
-<div class="con-box">
-<div class="fancy-box-icon">
-<i class="fa fa-envelope-o"></i>
-</div>
-<h3>EMAIL</h3>
-<div class="fancy-box-content">
-<p>alkhaleeltrust@yahoo.com</p>
-</div>
-</div>
-</div>
-<div class="clearfix"></div>
-<h2>REACH US</h2>
+<div class="row text-center">
+<h2 style="margin-top:0;">TO DONATE IN ALKHALEEL TRUST SCAN THE FOLLOWING QR CODE</h2>
 <div class="con-form clearfix">
-<div class="col-md-12">
- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSelqyGbXo2-HvW7zOXThLcxcvqeKFGGgks6T6KCZDlFweMFxg/viewform?embedded=true" width="640" height="943" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+ 
+ <div class="col-md-6">
+ 
+<p style="color:black;">
+Trust Bank account detail.<br><br>
+Account number. 735505000020<br><br>
+Account IFSC code. ICIC0007355 <br><br>
+Account Name. AL-KHALEEL EDUCATIONAL AND WELFARE TRUST<br><br>
+Account type. Current<br><br>
+ICICI Bank. Branch Kurji Patna Bihar.
+
+</p>
+ </div>
+ <div class="col-md-6">
+<div class="grid-image" >
+<img src="images/donate.jpg" ></div>
 </div>
 
-
+<!--
+ <div class="col-md-6">
+<input type="text" name="name" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="First Name*">
+</div>
+<div class="col-md-6">
+<input type="text" name="name" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="Last Name*">
+</div>
+<div class="col-md-6">
+<input type="text" name="phone" value="" size="40" class="" aria-invalid="false" placeholder="Phone Number*">
+</div>
+<div class="col-md-6">
+<input type="email" name="email" value="" size="40" class="" aria-invalid="false" placeholder="Email ID*">
+</div>
+<div class="col-md-6">
+<input type="text" name="street" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="Street Address*">
+</div>
+<div class="col-md-6">
+<input type="text" name="city" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="City / Town*">
+</div>
+<div class="col-md-6">
+<input type="text" name="country" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="Country*">
+</div>
+<div class="col-md-6">
+<input type="text" name="amount" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="Amount*">
+</div>
+<div class="col-md-12">
+<textarea name="message" cols="40" rows="5" class="" id="message" aria-invalid="false" placeholder="Message"></textarea>
+</div>
+<div class="col-xs-12 submit-button">
+<input type="submit" value="Donate Now" class="btn2" id="sub" style="border:none; margin: 20px 0 0 0">
+</div>
+-->
 </div>
 </div>
 </div>
@@ -255,7 +260,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootsnav.js"></script>
-<script src="js/banner.js"></script>  
-<script src="js/script.js"></script>
+<script src="js/banner.js"></script> 
+<script src="js/script.js"></script> 
 </body>
 </html>
