--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="container">
 <div class="row"> 
 <div class="attr-nav">
-<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a>
+<!--<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a> -->
 <a class="donation" href="donate.html">donate now</a>
 </div>           
 <div class="navbar-header">
@@ -348,8 +348,9 @@ Mufti Haseebullah Habeebi
 		<div class="bwt-footer-copyright">
 <div class="container">
 <div class="row">
-<div class="col-md-6 copyright">
-<div class="left-text">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div >
+<div align="left">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div class="text-right" >Design & Developed by Er.Md Sadique Iqubal</div>
 </div>
         </div>
         </div>
