--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="keywords" content="">
 <meta name="robots" content="index,follow">
 
-<title>Charity Hope</title>
+<title>Al-Khaleel Trust | Projects</title>
 
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="container">
 <div class="row"> 
 <div class="attr-nav">
-<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a>
+<!--<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a> -->
 <a class="donation" href="donate.html">donate now</a>
 </div>           
 <div class="navbar-header">
@@ -90,7 +90,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 </div>
 </section>
-
+<!--
 <section id="pro-sec">
 <div class="container">
 <div class="row text-center" style="margin-top:-30px;">
@@ -188,7 +188,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 </div>
 </section>
+-->
 
+<section id="pro-sec">
+Under developments...
+</section>
 
 <footer class="footer">
 		<div class="footer-body">
@@ -266,8 +270,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="bwt-footer-copyright">
 <div class="container">
 <div class="row">
-<div class="col-md-6 copyright">
-<div class="left-text">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div >
+<div align="left">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div class="text-right" >Design & Developed by Er.Md Sadique Iqubal</div>
 </div>
         </div>
         </div>
