--- a/sponser.html
+++ b/sponser.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="container">
 <div class="row"> 
 <div class="attr-nav">
-<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a>
+<!--<a class="sponsor-button" href="sponsor-a-child.html">sponsor a child</a> -->
 <a class="donation" href="donate.html">donate now</a>
 </div>           
 <div class="navbar-header">
@@ -90,7 +90,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 </div>
 </section>
-
+<!--
 <section id="about-sec">
 <div class="container">
 <div class="row text-center">
@@ -131,28 +131,9 @@ WE NEED YOUR HELP TO HELP OTHERS</h2>
 </div>
 </div>
 </section>
+-->
 
-<div class="callout">
-<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Change Their World. Change Yours. This changes everything.</h2><!-- /.callout-title -->
-			</div><!-- /.columns large-6 -->
-			
-			<div class="col-md-6">
-				<div class="callout-actions">
-					<a href="contact.html" class="button">Become Volunteer</a>
 
-					<span class="callout-separator">
-						<span>Or</span>
-					</span>
-
-					<a href="donate.html" class="button">Donate For Cause</a>
-				</div><!-- /.callout-actions -->
-			</div><!-- /.columns large-6 -->
-		</div><!-- /.row -->
-</div>
-</div>
 <footer class="footer">
 		<div class="footer-body">
                 <div class="container">
@@ -229,8 +210,9 @@ WE NEED YOUR HELP TO HELP OTHERS</h2>
 		<div class="bwt-footer-copyright">
 <div class="container">
 <div class="row">
-<div class="col-md-6 copyright">
-<div class="left-text">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div >
+<div align="left">Copyright &copy; Al-Khaleel Trust. All Rights Reserved</div>
+<div class="text-right" >Design & Developed by Er.Md Sadique Iqubal</div>
 </div>
         </div>
         </div>
