--- a/projects.html
+++ b/projects.html
@@ -37,10 +37,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="container">
 <div class="row"> 
 <div class="bar-phone">
-<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+1-310-341-3870</strong>
+<i class="fa fa-phone"></i> <span>Call Us :</span> <strong>+91 94154 27364</strong>
 </div>
 <div class="bar-mail">
-<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
+<i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>alkhaleeltrust@yahoo.com</strong>
 </div>
 <div class="header-social">
 <a class="facebook" href="#" title="facebook" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i>  </a>
