home page is updated

--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="carousel-inner" role="listbox">
             <!-- Item 1 -->
             <div class="item active slide1">
-                        <h2 data-animation="animated bounceInDown"><span>Give a little change a lot</span></h2>
+                        <!--  <h2 data-animation="animated bounceInDown"><span>Give a little change a lot</span></h2> -->
                         <!--<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>            --> 
              </div> 
             <!-- Item 2 -->
             <div class="item slide2">
-                        <h2 data-animation="animated bounceInDown"><span>More charity More better life</span></h2>
+                       <!-- <h2 data-animation="animated bounceInDown"><span>More charity More better life</span></h2>  -->
                         <!--<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>      -->       
              </div>
             <!-- Item 3 -->
             <div class="item slide3">
-                        <h2 data-animation="animated bounceInDown"><span>Raise fund Warm heart</span></h2>
+                    <!--    <h2 data-animation="animated bounceInDown"><span>Raise fund Warm heart</span></h2> -->
                         <!--<h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>      -->       
              </div>
             <!-- Item 4 -->
             <div class="item slide4">
-                        <h2 data-animation="animated bounceInDown"><span>Raise your funds for a free medical camp</span></h2>
+                       <!-- <h2 data-animation="animated bounceInDown"><span>Raise your funds for a free medical camp</span></h2> -->
                       <!--  <h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             -->
              </div>
@@ -122,12 +122,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   
 		
         <!-- End Wrapper for slides-->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+       <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <i class="fa fa-angle-left"></i><span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
             <i class="fa fa-angle-right"></i><span class="sr-only">Next</span>
-        </a>
+        </a>   -->
     </div>
 </div>
 
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <h1 style="font-family:auto;">Help the creatures to please the Creator </h1>
 <hr>
 
-<p align="left" style="  font-size: medium;    font-family: cursive; color:black;">
+<p align="left" style="  font-size: medium;    font-family: normal; color:black;text-decoration:none;text-align:justify;">
 
 All praises are due to Allah SWT and the peace, mercy and blessings be upon the Messenger of Allah.<br>
 The Prophet (SAWS)said:<br>
