--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <h1 style="font-family:auto;">Help the creatures to please the Creator </h1>
 <hr>
 
-<p align="left" style="  font-size: medium;    font-family: normal; color:black;text-decoration:none;text-align:justify;">
+<p align="left" style="  font-size: medium;    font-family: normal; color:black;text-align:justify;margin:4rem;">
 
 All praises are due to Allah SWT and the peace, mercy and blessings be upon the Messenger of Allah.<br>
 The Prophet (SAWS)said:<br>
