--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <section id="about-sec">
 <div class="container">
 <div class="row text-center">
-<h1 style="font-family:auto;">Help the creatures to please the Creator </h1>
+<h1 style="font-family:auto; margin:4rem;">Help the creatures to please the Creator </h1>
 <hr>
 
 <p align="left" style="  font-size: medium;    font-family: normal; color:black;text-align:justify;margin:4rem;">
@@ -152,7 +152,7 @@ Last year in the month of February, one thousand patients were given medical hel
 May Allah SWT be pleased with you and reward you the best!
 
 </p>
-<p align="left" style="  font-size: medium;    font-family: cursive; color:darkblue;">
+<p align="left" style="  font-size: medium;    font-family: cursive; color:darkblue;margin:4rem;">
  Thanking you,<br> 
 Mufti Haseebullah Habeebi
 
