--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@ Mufti Haseebullah Habeebi
 <div class="grid-content-left"><i class="fa fa-heart"></i></div>
 <div class="grid-content-wrapper"><h4>Charity for Education</h4>
 
-<p>One of the main goals and objectives of the Al-Khaleel Trust is to provide educational sponsorship to poor and orphan students and to provide scholarships to talented and intelligent students..</p>
+<p style="text-align:justify;">One of the main goals and objectives of the Al-Khaleel Trust is to provide educational sponsorship to poor and orphan students and to provide scholarships to talented and intelligent students..</p>
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
 <div class="col-md-4 clearfix top-off">
 <div class="grid-content-left"><i class="fa fa-cutlery"></i></div>
 <div class="grid-content-wrapper"><h4>Feed for Hungry Child</h4>
-<p>Every child deserves a wholesome meal regularly. In line with this, Al-Khaleel Trust strives each day to provide nutritious mid-day meals to school children. Mid-day meals have been a potential factor in boosting health, learning and development among school children.</p>
+<p style="text-align:justify;">Every child deserves a wholesome meal regularly. In line with this, Al-Khaleel Trust strives each day to provide nutritious mid-day meals to school children. Mid-day meals have been a potential factor in boosting health, learning and development among school children.</p>
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
