--- a/gallery.html
+++ b/gallery.html
@@ -91,130 +91,193 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 </div>
 </section>
-<!--
+
 <section id="gallery-sec" style="margin-top:40px;">
 <div class="container">
 <div class="row text-center">
 <ul class="clearfix">
 <li>
-<a href="images/gallery1.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery1.jpg">
+<a href="images/gallery1.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery1.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div></a>
 </li>
 <li>
-<a href="images/gallery2.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery2.jpg">
+<a href="images/gallery2.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery2.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery3.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery3.jpg">
+<a href="images/gallery3.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery3.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery4.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery4.jpg">
+<a href="images/gallery4.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery4.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery5.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery5.jpg">
+<a href="images/gallery5.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery5.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery6.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery6.jpg">
+<a href="images/gallery6.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery6.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery7.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery7.jpg">
+<a href="images/gallery7.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery7.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery8.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery8.jpg">
+<a href="images/gallery8.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery8.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
+
 <li>
-<a href="images/gallery1.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery1.jpg">
+<a href="images/gallery9.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery9.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div></a>
 </li>
 <li>
-<a href="images/gallery2.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery2.jpg">
+<a href="images/gallery10.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery10.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery3.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery3.jpg">
+<a href="images/gallery11.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery11.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery4.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery4.jpg">
+<a href="images/gallery12.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery12.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery5.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery5.jpg">
+<a href="images/gallery13.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery13.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery6.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery6.jpg">
+<a href="images/gallery14.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery14.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery7.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery7.jpg">
+<a href="images/gallery15.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery15.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery8.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery8.jpg">
+<a href="images/gallery16.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery16.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
+
+
+
+<li>
+<a href="images/gallery17.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery17.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+<li>
+<a href="images/gallery18.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery18.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+<li>
+<a href="images/gallery19.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery19.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+<li>
+<a href="images/gallery20.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery20.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+<li>
+<a href="images/gallery21.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery21.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+<li>
+<a href="images/gallery21.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery21.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+
+
+
+
+
+
 </ul>
 </div>
 </div>
 </section>
--->
+
 
 
 <section id="gallery-sec" style="margin-top:40px;">
-Under Developments...
+
 </section>
 
 <footer class="footer">
@@ -320,8 +383,8 @@ Under Developments...
 			$( '#gallery' ).click( function( e ) {
 				e.preventDefault();
 				$.swipebox( [
-					{ href : 'http://swipebox.csag.co/mages/image-1.jpg', title : 'My Caption' },
-					{ href : 'http://swipebox.csag.co/images/image-2.jpg', title : 'My Second Caption' }
+					{ href : 'http://swipebox.csag.co/mages/image-1.jpeg', title : 'My Caption' },
+					{ href : 'http://swipebox.csag.co/images/image-2.jpeg', title : 'My Second Caption' }
 				] );
 			} );
 
