--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 <i class="fa fa-bars"></i>
 </button>
-<a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="height: fit-content;" /></a>
+
+<a class="navbar-brand logo" href="index.html"><img src="images/logo.jpg" class="img-responsive"  style="height: fit-content;height:7rem;width:23rem;"/></a>
+
+<!-- <a  href="index.html" style="font-weight:bold;color:maroon;font-size:xx-large;margin:3rem;" class="img-responsive"> AL-KHALEEL TRUST </a> -->
+
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
@@ -233,24 +237,6 @@ Mufti Haseebullah Habeebi
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </div>
 </div>
