--- a/about-us.html
+++ b/about-us.html
@@ -241,6 +241,26 @@ Establish sewing centers at various places to make girls skilled .
 </div>
 </div>
 
+
+
+
+
+<div class="col-md-4 clearfix top-off">
+<div class="grid-content-left"><i class="fa fa-cutlery"></i></div>
+<div class="grid-content-wrapper"><h4>Charity for marriage</h4>
+<p style="text-align:justify;">Al-Khaleel Trust provides the bride with the newest materials needed in the marriage and after marriage ceremonies like food, clothes, beds, jewelry, shoes, etc. The happiness a family gets by securing a girl's life and getting her married to the desired groom, keeping the respect and culture of a family in mind is priceless.</p>
+<a href="activities.html" title="" >Read More</a>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 </div>
 </div>
 </div>
