--- a/activities.html
+++ b/activities.html
@@ -99,6 +99,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="col-md-6">
 <div class="image"><img src="images/charityedu1.jpg" /></div>
 </div>
+
+
 <div class="col-md-6">
 <div class="act-pad">
 <h4>Charity for Education</h4>
@@ -118,10 +120,14 @@ Source: RGI Census Population Projection 2016 and Unified DISE 2016-17</p>
 </div>
 
 
+
+
+
 <div class="act-box clearfix">
 <div class="col-md-6">
 <div class="image"><img src="images/charityedu2.jpg" /></div>
 </div>
+
 <div class="col-md-6">
 <div class="act-pad">
 <h4>FEED FOR HUNGRY CHILD</h4>
@@ -139,6 +145,43 @@ This World Hunger Day, make a generous donation of  to feed a child for a comple
 </div>
 </div>
 </div>
+
+
+
+
+
+
+
+
+<div class="act-box clearfix">
+<div class="col-md-6">
+<div class="image"><img src="images/charityedu3.jpg" /></div>
+</div>
+
+
+<div class="col-md-6">
+<div class="act-pad">
+<h4>Charity for Marriage</h4>
+<p style="text-align:justify;" >We do also take the best of the initiatives to promote the social security of the girls and also support them, we do also care for the underprivileged and we along with the deep association of the society would like to change the lives of them all, who are desperately anticipating for our help, today. Being the BEST NGO FOR MARRIAGE SUPPORT, we do also provide some of the crucial aids in developing the core areas of our girl child which can save and also create a better future tomorrow.
+One of the most precious bonds between the two families is the bond of marriage. Being the inseparable bond this can also lead to the growth of the happiness and contentment between the two. Having the depth of love and contentment between the two, it is also true that there is the high need to promote security and well being to promote the good health and the existence of the happiness amid the newlywed brides. Come forward to spread the word of happiness and contentment in the present day. Al-Khaleel Trust  is the best and also the trusted charitable trust for marriage that does also aim at fetching security to the girl child in promoting the well being of them, for a better tomorrow.
+Societal pressure in getting your daughters and sisters married is a major thing that needs to be taken care of. Marriage is an important duty in India and is respectable in our traditions and community. Marriage is a pride in the feminine gender and to their families. An auspicious occasion like that of a marriage, if done rightly, brings a lot of happiness to the families and other members in large. It is said that the person helping with the processes of marriage to occur smoothly is bigger than the one making the marriage happen.
+We collect the necessary money required in the form of DONATIONS from the people with better-off living conditions and the privileged sections of the society and 100% of the money we receive is directly contributed to the girl's family for the entire process of her marriage. A lot of families cannot take the burden of huge expenses that goes into a marriage. We take the burden of expenses in your shoulders as our complete responsibility to have a fine occasion of the ceremony. India still being a developing country, the girl gender is yet to be fully independent. After staying under the roof of their fathers', they are relocated to stay with their husbands and in-laws. For a girl to get married, it means that they now have a life-long partner to build their household with, it gives them more enthusiasm and reasons to live, they feel protected under their spouse's presence, 
+and she can share her happiness, sadness , and difficulties with someone now and forever.</p>
+
+<a href="donate.html" class="btn1">donate now</a>
+<div class="clearfix"></div>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 
 </div>
 </div>
@@ -212,25 +255,6 @@ This World Hunger Day, make a generous donation of  to feed a child for a comple
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
